--- a/index.html
+++ b/index.html
@@ -9,9 +9,13 @@
 
 <body>
     <div class = 'container'>
-        <input id='string' type="text"><br>
-        <input id='letter' type="text"><br>
+        <input id='string' type="text" placeholder="Enter a string.."><br>
+        <input id='letter' type="text" placeholder="Enter a letter.."><br>
         <button>find letter</button>
+        <div id = 'result'>
+            <p>Result:</p>
+        </div>
+
     </div>
 
     <script src="script.js"></script>
